--- a/src/Node运行环境测试/package.json
+++ b/src/Node运行环境测试/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
     "art-template": "^4.13.2",
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "express-art-template": "^1.0.1",
     "mine": "^0.1.0"
   }
 }
