--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/chuntiancai/Hello_Web_H5#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "formidable": "^3.5.1",
     "mime": "^3.0.0"
   }
