--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type":"module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/chuntiancai/Hello_Web_H5.git"
@@ -17,9 +18,16 @@
   },
   "homepage": "https://github.com/chuntiancai/Hello_Web_H5#readme",
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "formidable": "^3.5.1",
     "mime": "^3.0.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.22.15",
+    "@babel/core": "^7.22.19",
+    "@babel/node": "^7.22.19",
+    "@babel/preset-env": "^7.22.15"
   }
 }
