--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "type":"module",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/chuntiancai/Hello_Web_H5.git"
@@ -22,7 +22,8 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "formidable": "^3.5.1",
-    "mime": "^3.0.0"
+    "mime": "^3.0.0",
+    "mongoose": "^7.6.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.15",
