--- a/src/案例练手/BlogCase/package.json
+++ b/src/案例练手/BlogCase/package.json
@@ -6,14 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "type": "module", 
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "art-template": "^4.13.2",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "express-art-template": "^1.0.1",
+    "express-session": "^1.17.3",
     "mongoose": "^8.0.0"
   }
 }
