--- a/src/案例练手/BlogCase/package.json
+++ b/src/案例练手/BlogCase/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "express-art-template": "^1.0.1",
     "express-session": "^1.17.3",
+    "joi": "^17.11.0",
     "mongoose": "^8.0.0"
   }
 }
