--- a/src/案例练手/BlogCase/package.json
+++ b/src/案例练手/BlogCase/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "art-template": "^4.13.2",
     "body-parser": "^1.20.2",
+    "config": "^3.3.9",
     "express": "^4.18.2",
     "express-art-template": "^1.0.1",
     "express-session": "^1.17.3",
     "joi": "^17.11.0",
-    "mongoose": "^8.0.0"
+    "mongoose": "^8.0.0",
+    "mongoose-sex-page": "^1.2.4"
   }
 }
