--- a/src/案例练手/BlogCase/package.json
+++ b/src/案例练手/BlogCase/package.json
@@ -14,9 +14,11 @@
     "art-template": "^4.13.2",
     "body-parser": "^1.20.2",
     "config": "^3.3.9",
+    "dateformat": "^5.0.3",
     "express": "^4.18.2",
     "express-art-template": "^1.0.1",
     "express-session": "^1.17.3",
+    "formidable": "^3.5.1",
     "joi": "^17.11.0",
     "mongoose": "^8.0.0",
     "mongoose-sex-page": "^1.2.4"
