--- a/src/webpack测试/webpackCase/package.json
+++ b/src/webpack测试/webpackCase/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.7.1"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^5.5.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
