--- a/src/Vue框架测试/VueCase/vue_shop/package.json
+++ b/src/Vue框架测试/VueCase/vue_shop/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "core-js": "^3.8.3",
-    "element-ui": "^2.4.5",
+    "element-plus": "^2.4.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
@@ -28,6 +28,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
+    "less": "^4.2.0",
+    "less-loader": "^11.1.3",
     "vue-cli-plugin-element": "^1.0.1"
   }
 }
