--- a/src/Vue框架测试/VueCase/vue_shop/package.json
+++ b/src/Vue框架测试/VueCase/vue_shop/package.json
@@ -18,7 +18,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
+    "@babel/eslint-parser": "^7.23.3",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
@@ -29,7 +29,7 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^7.0.0-beta.4",
+    "eslint-plugin-vue": "^7.20.0",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
     "unplugin-element-plus": "^0.8.0",
