--- a/src/Vue框架测试/VueCase/vue_shop/package.json
+++ b/src/Vue框架测试/VueCase/vue_shop/package.json
@@ -19,10 +19,11 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.23.3",
+    "@typescript-eslint/parser": "^6.12.0",
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-service": "^5.0.8",
     "@vue/eslint-config-standard": "^6.1.0",
     "babel-plugin-component": "^1.1.1",
     "eslint": "^7.32.0",
@@ -33,6 +34,11 @@
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
     "unplugin-element-plus": "^0.8.0",
-    "vue-cli-plugin-element": "^1.0.1"
+    "vue-cli-plugin-element": "^1.0.1",
+    "vue-loader": "^17.3.1",
+    "vue-template-compiler": "^2.7.15"
+  },
+  "rules":{
+    "no-console":"error"
   }
 }
