--- a/src/Vue框架测试/VueCase/vue_shop/package.json
+++ b/src/Vue框架测试/VueCase/vue_shop/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.23.3",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "^5.0.8",
@@ -30,7 +31,7 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^7.20.0",
+    "eslint-plugin-vue": "^9.18.1",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
     "unplugin-element-plus": "^0.8.0",
@@ -38,7 +39,7 @@
     "vue-loader": "^17.3.1",
     "vue-template-compiler": "^2.7.15"
   },
-  "rules":{
-    "no-console":"error"
+  "rules": {
+    "no-console": "error"
   }
 }
