--- a/src/Vue框架测试/VueCase/vue_shop/package.json
+++ b/src/Vue框架测试/VueCase/vue_shop/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "antd": "^5.11.4",
     "axios": "^1.6.2",
     "babel-plugin-import": "^1.13.8",
@@ -25,15 +26,16 @@
     "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "^5.0.8",
-    "@vue/eslint-config-standard": "^6.1.0",
+    "@vue/eslint-config-standard": "^8.0.1",
     "babel-plugin-component": "^1.1.1",
-    "eslint": "^7.32.0",
+    "eslint": "^8.54.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^9.18.1",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
+    "typescript": "^5.3.2",
     "unplugin-element-plus": "^0.8.0",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-loader": "^17.3.1",
