--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "@babel/cli": "^7.22.15",
     "@babel/core": "^7.22.19",
     "@babel/node": "^7.22.19",
-    "@babel/preset-env": "^7.22.15"
+    "@babel/preset-env": "^7.22.15",
+    "@typescript-eslint/eslint-plugin": "^6.13.0",
+    "@typescript-eslint/parser": "^6.13.0",
+    "eslint": "^8.54.0",
+    "eslint-plugin-vue": "^9.18.1"
   }
 }
