--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.22.15",
-    "@babel/core": "^7.22.19",
+    "@babel/core": "^7.23.3",
+    "@babel/eslint-parser": "^7.23.3",
     "@babel/node": "^7.22.19",
     "@babel/preset-env": "^7.22.15",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
