--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/chuntiancai/Hello_Web_H5#readme",
   "dependencies": {
+    "@babel/eslint-plugin": "^7.22.10",
     "@babel/polyfill": "^7.12.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
