合进去axios，还没能用nuxt做服务器。还没有和数据库连接起来。

--- a/src/Vue框架测试/VueCase/nuxt_shop/package.json
+++ b/src/Vue框架测试/VueCase/nuxt_shop/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --open",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@nuxt/http": "^0.6.4",
+    "axios": "^1.6.2",
     "element-plus": "^2.4.3"
   }
 }
